--- a/week/myrsume.html
+++ b/week/myrsume.html
@@ -12,38 +12,60 @@
     <title>Zerisenay Resume</title>
 </head>
 
-<body>
+<body class="bg-img">
 
     <section id="profile">
         <img id="profile_pic" src="./zer.jpg" alt="profile pics">
 
         <h1 id="name">Zerisenay Solomon</h1>
         <p>
-            I was born in 1982 and happily married with three children. I have originally an ICT background.I have worked as an ICT teacher
-            at the Decemhare High school and after that, I joined the Ministry of Finance and I was responsible for supporting
-            and implementing the full ICT network of the office and braches as well.I have also worked as a general purchaser
-            for a trading company as I was responsible for purchasing commercial sized steel bars/plates and electronics.
-            At this moment I am working as a salesman at a bakery shop and following a web development program at Hack your
-            future.
+            I was born in 1982 and happily married with three children. I have originally an ICT background. In my Work experinece I
+            have worked as an ICT teacher ,Network administrator,Purchasor and salesman in different organizations. Personally,
+            I am a very open-minded, extremely eager to work in a challenging environment. At this moment I am following
+            a web development program at Hack your future.
         </p>
     </section>
 
 
-    <ul id="personal-info">
+
+    <ul id="Menu">
         <li class="li1">
-            <i class="material-icons">email</i> yosiami15@gmail.com</li>
+            <i class="material-icons">school</i>
+            <a href="#edu"> EDUCATION</a>
+        </li>
         <li class="li1">
-            <i class="material-icons">stay_current_portrait </i>0684965909</li>
+            <i class="material-icons">work
+
+            </i>
+            <a href="#work">WORK EXPERIENCE</a>
+        </li>
         <li class="li1">
-            <i class="material-icons">place </i>Amstelveen, Netherlads</li>
+            <i class="material-icons">
+                people
+            </i>
+            <a href="#training">TRAINING </a>
+        </li>
         <li class="li1">
-            <i class="material-icons">facebook</i>zerisenay.Solomon</li>
+            <i class="material-icons">
+                language
+            </i>
+            <a href="#lang">LANGUAGES</a>
+        </li>
+        <li class="li1">
+            <i class="material-icons">weekend</i>
+            <a href="#hobby">OTHER INTERESTS</a>
+        </li>
+        <li class="li1">
+            <i class="material-icons">account_box</i>
+            <a href="#details">Details</a>
+        </li>
     </ul>
+
 
     <div class="first-column">
 
         <section>
-            <h2>
+            <h2 id="edu">
                 <i class="material-icons" style="font-size:30px;margin-right:10px;">school</i>EDUCATION:</h2>
 
 
@@ -56,7 +78,7 @@
         </section>
 
         <section>
-            <h2>
+            <h2 id="work">
                 <i class="material-icons" style="font-size:30px;margin-right:10px;">work</i>WORK EXPERIENCE:</h2>
 
             <div class="time-place">
@@ -154,7 +176,7 @@
         </section>
 
         <section>
-            <h2>
+            <h2 id="training">
                 <i class="material-icons" style="font-size:30px;margin-right:10px;">people</i>TRAINING:</h2>
             <div class="time-place">
                 <p>
@@ -198,7 +220,25 @@
     <!--  The first big colomun of the page  ends here  -->
     <div class="second-column">
         <section>
-            <h2>
+            <h2 id="details">
+                <i class="material-icons" style="font-size:30px;margin-right:10px">account_box</i>DETAILS</h2>
+            <ul id="personal-info">
+
+                <li class="li2">
+                    <i class="material-icons">email</i>
+                    <a href="mailto:yosiami15@gmail.com?Subject=Hello%20again" target="_top"> yosiami15@gmail.com
+                        <a></a>
+                </li>
+                <li class="li2">
+                    <i class="material-icons">stay_current_portrait </i>0684965909</li>
+                <li class="li2">
+                    <i class="material-icons">place </i>Jungfrau 8 1186CP Amstelveen </li>
+                <li class="li2">
+                    <i class="material-icons">facebook</i>zerisenay.Solomon</li>
+            </ul>
+        </section>
+        <section>
+            <h2 id="lang">
                 <i class="material-icons" style="font-size:30px;margin-right:10px">language</i>LANGUAGES፡</h2>
             <div class="time-place">
                 <p>
@@ -223,7 +263,7 @@
 
         <section>
 
-            <h2>
+            <h2 id="hobby">
                 <i class="material-icons" style="font-size:30px;margin-right:10px">weekend</i> OTHER INTERESTS ፡</h2>
 
             <p>Watching soccer, serving voluntarily in the church, reading books and magazines.</p>
@@ -233,7 +273,9 @@
 
     </div>
 
-
+    <p id="footer">
+        <em> copy right© 2018 Zerisenay</em>
+    </p>
 
 </body>
 
