--- a/week/myrsume.html
+++ b/week/myrsume.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--GOOGLE REFERENCE  FOR THE ICONS-->
-    <link rel="stylesheet" type="text/css" href="myresume.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- CSS FILE -->
 
     <title>Zerisenay Resume</title>
