one error corrected

--- a/week/index.html
+++ b/week/index.html
@@ -224,7 +224,7 @@
 
                 <li class="li2">
                     <i class="material-icons">email</i>
-                    <a href="mailto:yosiami15@gmail.com?Subject=Hello%20again" target="_top"> yosiami15@gmail.com
+                    <a href="mailto:yosiami15@gmail.com?Subject=Hello%20again" target="_top"> yosiami15@gmail.com</a>
                         
                 </li>
                 <li class="li2">
