corrected after comment

--- a/week/index.html
+++ b/week/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--GOOGLE REFERENCE  FOR THE ICONS-->
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,59 +14,56 @@
 
 <body class="bg-img">
 
-    <section id="profile">
-        <img id="profile_pic" src="./zer.jpg" alt="profile pics">
+    <header id="profile">
+        <img id="profile_pic" src="./image/zer.jpg" alt="profile pics">
 
-        <h1 id="name">Zerisenay Solomon</h1>
+        <h1>Zerisenay Solomon</h1>
         <p>
             I was born in 1982 and happily married with three children. I have originally an ICT background. In my Work experinece I
             have worked as an ICT teacher ,Network administrator,Purchasor and salesman in different organizations. Personally,
             I am a very open-minded, extremely eager to work in a challenging environment. At this moment I am following
             a web development program at Hack your future.
         </p>
-    </section>
+    </header>
 
 
 
-    <ul id="Menu">
-        <li class="li1">
+    <nav>
+        <ul class="li1">
             <i class="material-icons">school</i>
             <a href="#edu"> EDUCATION</a>
-        </li>
-        <li class="li1">
-            <i class="material-icons">work
-
-            </i>
+        </ul>
+        <ul class="li1">
+            <i class="material-icons">work </i>
             <a href="#work">WORK EXPERIENCE</a>
-        </li>
-        <li class="li1">
-            <i class="material-icons">
-                people
-            </i>
+        </ul>
+
+        <ul class="li1">
+            <i class="material-icons"> people</i>
             <a href="#training">TRAINING </a>
-        </li>
-        <li class="li1">
+        </ul>
+        <ul class="li1">
             <i class="material-icons">
                 language
             </i>
             <a href="#lang">LANGUAGES</a>
-        </li>
-        <li class="li1">
+        </ul>
+        <ul class="li1">
             <i class="material-icons">weekend</i>
             <a href="#hobby">OTHER INTERESTS</a>
-        </li>
-        <li class="li1">
+        </ul>
+        <ul class="li1">
             <i class="material-icons">account_box</i>
             <a href="#details">Details</a>
-        </li>
-    </ul>
+        </ul>
+    </nav>
 
 
-    <div class="first-column">
+    <main>
 
         <section>
             <h2 id="edu">
-                <i class="material-icons" style="font-size:30px;margin-right:10px;">school</i>EDUCATION:</h2>
+                <i class="material-icons">school</i>EDUCATION:</h2>
 
 
             <div class="time-place">
@@ -77,7 +76,7 @@
 
         <section>
             <h2 id="work">
-                <i class="material-icons" style="font-size:30px;margin-right:10px;">work</i>WORK EXPERIENCE:</h2>
+                <i class="material-icons">work</i>WORK EXPERIENCE:</h2>
 
             <div class="time-place">
                 <p class="time">
@@ -175,7 +174,7 @@
 
         <section>
             <h2 id="training">
-                <i class="material-icons" style="font-size:30px;margin-right:10px;">people</i>TRAINING:</h2>
+                <i class="material-icons">people</i>TRAINING:</h2>
             <div class="time-place">
                 <p>
                     <em>Oct. 2010- Nov.2010</em>
@@ -211,33 +210,33 @@
             </div>
 
         </section>
-    </div>
+    </main>
 
 
 
     <!--  The first big colomun of the page  ends here  -->
-    <div class="second-column">
+    <aside>
         <section>
             <h2 id="details">
-                <i class="material-icons" style="font-size:30px;margin-right:10px">account_box</i>DETAILS</h2>
+                <i class="material-icons">account_box</i>DETAILS</h2>
             <ul id="personal-info">
 
                 <li class="li2">
                     <i class="material-icons">email</i>
-                    <a href="mailto:yosiami15@gmail.com?Subject=Hello%20again" target="_top"> yosiami15@gmail.com</a>
-                        
+                    <a href="mailto:yosiami15@gmail.com?Subject=Hello%20again" target="_top"> yosiami15@gmail.com
+                        <a></a>
                 </li>
                 <li class="li2">
-                    <i class="material-icons">stay_current_portrait </i>0684965909</li>
+                    <i class="material-icons">stay_current_portrait </i>0612345678</li>
                 <li class="li2">
-                    <i class="material-icons">place </i>Jungfrau 8 1186CP Amstelveen </li>
+                    <i class="material-icons">place </i>street 2 1111GH Amsterdam </li>
                 <li class="li2">
                     <i class="material-icons">facebook</i>zerisenay.Solomon</li>
             </ul>
         </section>
         <section>
             <h2 id="lang">
-                <i class="material-icons" style="font-size:30px;margin-right:10px">language</i>LANGUAGES፡</h2>
+                <i class="material-icons">language</i>LANGUAGES፡</h2>
             <div class="time-place">
                 <p>
                     <em>English</em>
@@ -262,19 +261,19 @@
         <section>
 
             <h2 id="hobby">
-                <i class="material-icons" style="font-size:30px;margin-right:10px">weekend</i> OTHER INTERESTS ፡</h2>
+                <i class="material-icons">weekend</i> OTHER INTERESTS ፡</h2>
 
             <p>Watching soccer, serving voluntarily in the church, reading books and magazines.</p>
 
         </section>
 
 
-    </div>
-
-    <p id="footer">
-        <em> copy right© 2018 Zerisenay</em>
-    </p>
-
+    </aside>
+    <footer>
+        <p>
+            <em> copy right© 2018 Zerisenay</em>
+        </p>
+    </footer>
 </body>
 
 </html>
