--- a/Week3/index.html
+++ b/Week3/index.html
@@ -47,7 +47,7 @@
         <div class="search"> <input type="search" id="mySearch2" placeholder="Search "></div>
     </div>
 
-    <section class="main">
+    <div class="main">
 
         <article class="item3">
             <h2><a href=""> Belastingen, Uitkeringen .. </a></h2>
@@ -107,7 +107,7 @@
             <p> Eindeexamens sdfsdfsd asdfsdfgsd dsfetwesasdg asg</p>
         </article>
 
-    </section>
+    </div>
 
     <div class="side">
 
@@ -127,7 +127,7 @@
             <p>wat zijn de gevolgen ..........asasdfasdf fasd sdfser.</p>
         </div>
 
-        <div class="item4" alt="gevolgen">
+        <div class="item4">
             <img src="images/halvering.jpg" alt="halvering">
             <h2>
                 <a href="">Gevolgen van de droogte</a>
@@ -190,8 +190,7 @@
 
             <h3>Meld u aan voor de </h3>
             <p>Nieuwsbrief
-                <br>
-                <h3> Regeringsnieuws </h3>
+                <br>Regeringsnieuws
             </p>
         </div>
     </div>
